[gd_scene load_steps=7 format=3 uid="uid://bl0hvwwc14dyi"]

[ext_resource type="Theme" uid="uid://cp2u1kgj60ic" path="res://Resources/default_theme.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://bbgrbjt6243ku" path="res://Scenes/AnnotatorShape.tscn" id="2"]
[ext_resource type="Script" uid="uid://codj8x7gpmn66" path="res://Scripts/Annotator.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://ddf2xjwcht77u" path="res://Scenes/CloseButton.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://dxr8x86jdcd2p" path="res://Graphics/Tiles/Highlight.jpg" id="5"]

[sub_resource type="Shortcut" id="2"]

[node name="Annotator" type="Panel"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -64.0
offset_right = 384.0
theme = ExtResource("1")
script = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 720.0
offset_bottom = 76.0
scale = Vector2(0.5, 0.5)

[node name="Line" parent="HBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Rectangle" parent="HBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Circle" parent="HBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Icons" parent="HBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Eraser" parent="HBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 141.311
offset_top = -325.124
offset_right = 201.311
offset_bottom = 354.876
grow_vertical = 0
scale = Vector2(0.5, 0.5)
alignment = 2

[node name="Greenhouse" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Mining" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Cave" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="SP" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Energy" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Stone" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Minerals" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Money" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Arrow" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Cross" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="Check" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="CloseButton" parent="." instance=ExtResource("4")]
layout_mode = 1
offset_left = -32.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 32.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 16.0
offset_right = 552.0
offset_bottom = 48.0
mouse_filter = 2

[node name="ColorPickerBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 20.0
offset_right = 548.0
offset_bottom = 44.0
shortcut = SubResource("2")
shortcut_in_tooltip = false
texture_normal = ExtResource("5")
ignore_texture_size = true
stretch_mode = 5

[node name="ColorPicker" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.698
anchor_right = 0.698
offset_left = -132.064
offset_top = -552.0
offset_right = 231.936
offset_bottom = -2.0

[node name="ColorPicker" type="ColorPicker" parent="ColorPicker"]
layout_mode = 2

[node name="Thickness" type="HSlider" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 24.0
offset_right = 480.0
offset_bottom = 40.0
min_value = 1.0
max_value = 500.0
value = 10.0
rounded = true

[node name="ThicknessLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 488.0
offset_top = 20.0
offset_right = 548.0
offset_bottom = 44.0
text = "10"

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(0, 0, 768, 0, 768, 64, 0, 64)

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(140, -324, 172, -324, 172, 16, 140, 16)

[node name="Polygon2D3" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(404, -484, 768, -484, 768, 0, 404, 0)

[connection signal="visibility_changed" from="." to="." method="_on_Annotator_visibility_changed"]
[connection signal="mouse_entered" from="HBoxContainer/Icons" to="." method="_on_Icons_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Icons" to="." method="_on_mouse_exited"]
[connection signal="close_button_pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="mouse_entered" from="ColorPickerBtn" to="." method="_on_ColorPickerBtn_mouse_entered"]
[connection signal="mouse_exited" from="ColorPickerBtn" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ColorPickerBtn" to="." method="_on_ColorPickerBtn_pressed"]
[connection signal="color_changed" from="ColorPicker/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="mouse_entered" from="Thickness" to="." method="_on_Thickness_mouse_entered"]
[connection signal="mouse_exited" from="Thickness" to="." method="_on_Thickness_mouse_exited"]
[connection signal="value_changed" from="Thickness" to="." method="_on_Thickness_value_changed"]
